RESOLVED FIXED293822
Fix MessageChannel with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=293822
Summary Fix MessageChannel with site isolation enabled
Alex Christensen
Reported 2025-05-30 12:13:56 PDT
...
Attachments
Alex Christensen
Comment 1 2025-05-30 12:18:15 PDT
Radar WebKit Bug Importer
Comment 2 2025-05-30 12:19:34 PDT
EWS
Comment 3 2025-05-30 14:02:38 PDT
Committed 295627@main (facee632ca54): <https://commits.webkit.org/295627@main> Reviewed commits have been landed. Closing PR #46136 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.